feat: Add password reset functionality and improve API key handling
Introduces password reset screens and logic for both Tamil and English languages. Enhances API key handling in `geminiService.ts` and `components/Dashboard.tsx` to safely access `process.env.API_KEY`, preventing errors in environments where `process` is undefined. Also includes minor updates to manifest.json and index.html for better PWA integration and a small polyfill for `process`.

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,7 @@
   "name": "Viyabaari - Tamil Business Manager",
   "short_name": "Viyabaari",
   "description": "Easy Tamil accounting & inventory app. Manage stock with photos, track income/expenses, and view AI insights.",
-  "id": "com.viyabaari.app",
-  "start_url": "/index.html",
+  "start_url": "/",
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
@@ -13,9 +12,6 @@
   "lang": "ta",
   "dir": "ltr",
   "prefer_related_applications": false,
-  "launch_handler": {
-    "client_mode": "navigate-existing"
-  },
   "display_override": ["window-controls-overlay", "minimal-ui"],
   "categories": ["business", "finance", "productivity"],
   "icons": [
@@ -42,24 +38,8 @@
     {
       "name": "Add Transaction",
       "short_name": "Entries",
-      "url": "/index.html",
+      "url": "/",
       "icons": [{ "src": "https://ui-avatars.com/api/?name=Tx&background=4f46e5&color=fff&size=192&rounded=true", "sizes": "192x192", "type": "image/png" }]
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?auto=format&fit=crop&w=400&q=80",
-      "sizes": "400x600",
-      "type": "image/jpeg",
-      "form_factor": "narrow",
-      "label": "Inventory Management"
-    },
-    {
-      "src": "https://images.unsplash.com/photo-1664575602276-acd073f104c1?auto=format&fit=crop&w=1280&q=80",
-      "sizes": "1280x853",
-      "type": "image/jpeg",
-      "form_factor": "wide",
-      "label": "Desktop Dashboard"
     }
   ]
 }
