--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,6 +27,24 @@
       }
     }
   ],
+  "protocol_handlers": [
+    {
+      "protocol": "web+viyabaari",
+      "url": "/?link=%s"
+    }
+  ],
+  "share_target": {
+    "action": "/",
+    "method": "GET",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  },
+  "edge_side_panel": {
+    "preferred_width": 480
+  },
   "icons": [
     {
       "src": "https://ui-avatars.com/api/?name=V&background=4f46e5&color=fff&size=192&rounded=true&font-size=0.6",
