--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
-
 {
-  "name": "viyabaari",
+  "name": "copy-of-copy-of-copy-of-copy-of-copy-of-copy-of-viyabaaram--tamil-accounting-&-stock",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.40.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "lucide-react": "^0.263.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@vitejs/plugin-react": "^5.1.4",
+    "vite": "^7.3.1",
+    "react-dom": "^19.2.4",
+    "lucide-react": "^0.564.0",
+    "@google/genai": "^1.41.0",
+    "react": "^19.2.4",
+    "@supabase/supabase-js": "^2.95.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
