--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-copy-of-copy-of-copy-of-copy-of-viyabaaram--tamil-accounting-&-stock",
+  "name": "viyabaari",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,25 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.41.0",
-    "@supabase/supabase-js": "^2.95.3",
-    "@vitejs/plugin-react": "^5.1.4",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^12.34.3",
-    "lucide-react": "^0.564.0",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0",
-    "tailwind-merge": "^3.5.0",
-    "vite": "^7.3.1"
+
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.2.0",
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "tailwindcss": "^4.2.0",
+    
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
