--- a/public/manifest.json
+++ b/public/manifest.json
@@ -47,19 +47,19 @@
   },
   "icons": [
     {
-      "src": "https://ui-avatars.com/api/?name=V&background=4f46e5&color=fff&size=192&rounded=true&font-size=0.6",
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3045/3045388.png",
+      "src": "/logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3045/3045388.png",
+      "src": "/logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
