--- a/manifest.json
+++ b/manifest.json
@@ -16,19 +16,19 @@
   "categories": ["business", "finance", "productivity"],
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/logo.png",
+      "src": "/512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/logo.png",
+      "src": "/512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
